fix overlap of footer on output

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-    position: relative;
+body {
+  position: relative;
 }
 .container {
   /* border: 1px solid red; */
@@ -67,6 +67,7 @@ body{
 }
 #msg {
   font-weight: bold;
+  margin-bottom: 1rem;
   width: 40%;
   font-size: 1.4rem;
   text-align: center;
@@ -76,13 +77,13 @@ body{
 }
 footer {
   padding: 0.4rem 0;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  /* position: absolute; */
+  /* bottom: 0;
+  left: 0; */
   width: 100%;
   text-align: center;
   height: 4rem;
-  /* background-color: #003865; */
+
   background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
 }
 footer p {
@@ -91,13 +92,13 @@ footer p {
   font-weight: bold;
 }
 .links a {
-    text-decoration: none;
-    color: #fff;
-  }
-  .links i {
-    font-size: 2rem;
-    padding: 0 0.8rem;
-  }
+  text-decoration: none;
+  color: #fff;
+}
+.links i {
+  font-size: 2rem;
+  padding: 0 0.8rem;
+}
 @media screen and (max-width: 768px) {
   .heading {
     font-size: 1.2rem;
@@ -105,15 +106,22 @@ footer p {
   .form-container {
     width: 100%;
   }
+  .form-container form {
+    width: 100%;
+  }
+  #msg {
+    /* border: 1px solid red; */
+    width: 100%;
+  }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .container {
     padding: 1rem;
   }
   .heading {
     font-size: 1rem;
-    /* border: 1px solid red; */
+
     text-align: center;
   }
   .form-container {
